# sbx-ui

./: .gitignore  .npmrc  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  IDEA.md  ONBOARDING.md  Package.resolved  Package.swift  QUICKSTART.md  README.md  phase-1-implementation-plan.md
Configuration/: Beta.xcconfig  Canary.xcconfig  Stable.xcconfig
cli/: Package.swift  pyproject.toml
cli/SBXCore/: Models  Services
cli/Sources/sbx-ui-cli/: CLI.swift  Formatting.swift  PolicyCommands.swift  PortsCommands.swift
cli/Tests/CLIE2ETests/: CLIE2EHelpers.swift  ErrorHandlingTests.swift  HelpAndVersionTests.swift  LifecycleTests.swift  ScenarioTests.swift
cli/Tests/SBXCoreTests/: SBXCoreTests.swift
cli/sbx_ui_cli/: __init__.py  __main__.py  formatter.py  main.py  models.py  parser.py  service.py
cli/tests/: test_integration.py  test_models.py  test_parser.py
docs/: TESTING.md  docker_sandbox_docs_index.md  install-sbx-claude-code-web.md  kanban-design.md  linux-cli.md  mock-sbx.md  plugin-development.md  sbx-cli-reference.md
sbx-ui/: AppDelegate.swift  AppDelegateAdapter.swift  ContentView.swift  Info.plist  Item.swift  sbx_uiApp.swift
sbx-ui.xcodeproj/: project.pbxproj
sbx-uiTests/: EditorProviderTests.swift  EditorStoreTests.swift  MacOSIntegrationTests.swift  sbx_uiTests.swift
sbx-uiUITests/: EditorE2ETests.swift  EditorUITestCase.swift  sbx_uiCliMockUITests.swift  sbx_uiUITests.swift  (+1 more)
sdk/python/: pyproject.toml
sdk/python/examples/hello_plugin/: main.py  plugin.json
sdk/python/sbx_plugin/: __init__.py  rpc.py  types.py
sdk/python/tests/: test_rpc.py
(+137 files in other folders)
