[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sbx-ui-cli"
version = "0.1.0"
description = "Linux CLI for Docker Sandbox management"
requires-python = ">=3.9"
license = "MIT"

[project.scripts]
sbx-ui = "sbx_ui_cli.main:main"

[tool.setuptools.packages.find]
include = ["sbx_ui_cli*"]
